# pge-calculator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_app.py
data/: generation_rates.csv  pge_rates.csv  sample_usage.csv
src/: __init__.py
src/pge_calculator/: __init__.py  app.py  calculator.py
