[tool.poetry]
name = "pge-calc"
version = "1.0.0"
description = "A comprehensive utility to help you find the best PG&E electricity rate plan based on your actual usage patterns"
authors = ["Ashay Changwani <ashaychangwani@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ashaychangwani/pge-calc"
repository = "https://github.com/ashaychangwani/pge-calc"
keywords = ["pge", "electricity", "rate", "calculator", "utility", "savings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Office/Business :: Financial",
]
packages = [{include = "pge_calculator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.45.1"
pandas = "^2.3.0"
plotly = "^6.1.2"
watchdog = "^6.0.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

[tool.poetry.scripts]
pge-calc = "src.pge_calculator.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "plotly.*",
]
ignore_missing_imports = true
